finalized salary analysis

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 EmployeeSQL/postpreq_access.py
+EmployeeSQL/__pycache__/postpreq_access.cpython-37.pyc
+EmployeeSQL/.ipynb_checkpoints/Salary Analysis-checkpoint.ipynb
